feat(repo-metrics): add commits with no contributors to metrics and filter
